feat: integrated aml alerts into log service
